--- a/src/css/style.less
+++ b/src/css/style.less
@@ -130,3 +130,11 @@ margin-left: 1630px;
   }
 }
 // Landing Page End CSS
+.notfounderror {
+    background-color: #3faa42;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+}
