--- a/src/css/style.less
+++ b/src/css/style.less
@@ -19,11 +19,6 @@
   color:white;
   font-family: "Arvo"
 }
-.signupgradient{
-background: #6A9113;
-background: -webkit-linear-gradient(to right, #6A9113, #141517);
-background: linear-gradient(to right, #6A9113, #141517);
-}
 
 .ptext{
   position: absolute;
@@ -87,7 +82,7 @@ background: linear-gradient(to right, #6A9113, #141517);
 .link{
 margin-left: 1630px;
 }
-.navbar {
+.navbar-landingpage {
    background-color: transparent!important;
    background: transparent!important;
    border-color: transparent!important;
@@ -97,15 +92,18 @@ margin-left: 1630px;
   color:white!important;
   font-family: "Arvo"!important;
   font-size: 25px!important;
+  // margin-left: 820px
+  
   }
 .link2{
   margin-left:835px;
 }
-.navbar-brand{
+.navbar-brand-landingpage{
   color:white!important;
-  font-size:75px;
+  font-size:49px;
   font-family:"arvo"
 }
+
 .center{
   color:white;
   font-size:20px;
@@ -118,9 +116,14 @@ margin-left: 1630px;
   font-size:30px;
 }
 
-@media screen and (max-width: 1080px){
+@media screen and (max-width: 768px){
   .item{
-    margin-left:835px;
+    margin-left:835px!important;
+  }
+}
+@media screen and (max-width: 1068px){
+  .item{
+    margin-left:400px!important;
   }
 }
 
@@ -130,6 +133,7 @@ margin-left: 1630px;
   }
 }
 // Landing Page End CSS
+// Start of CSS for notfound page!
 .notfounderror {
     background-color: #3faa42;
     position: fixed;
@@ -138,8 +142,20 @@ margin-left: 1630px;
     width: 100%;
     height: 100%;
 }
+//Start of CSS for account page
 
+.navbar-account{
+  background-color: green;
 
-// html, body {
-//     height: 100%;
-// }
+}
+.navbar-brand-account{
+  color:white!important;
+  font-size:40px;
+  font-family:"arvo"
+}
+.nav-item-dropdown{
+  color:white!important;
+  font-size:19px;
+  font-family:"arvo"
+}
+
